# SQLCipherMultiplatform

./: .env.example  .gitignore  .gitmodules  CONTEXT.md  LICENSE  MAVEN_CENTRAL_PREP_PLAN.md  PRODUCTION_READINESS_PLAN.md  README.md  WINDOWS_FIRST_READINESS_PLAN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: _linux-native-build.yml  _macos-native-build.yml  _windows-native-build.yml  ci.yml  release.yml
jdbc-sqlcipher-jvm/: build.gradle.kts
jdbc-sqlcipher-jvm/src/main/kotlin/dev/boosted/sqlcipher/jdbc/: NativeBridge.kt  ProxyJdbc.kt  SqlCipherDriver.kt  SqlCipherSecurity.kt
jdbc-sqlcipher-jvm/src/main/kotlin/io/github/s0d3s/sqlcipher/multiplatform/jdbc/: NativeBridge.kt  ProxyJdbc.kt  SqlCipherDriver.kt  SqlCipherSecurity.kt
jdbc-sqlcipher-jvm/src/test/kotlin/dev/boosted/sqlcipher/jdbc/: SqlCipherIntegrationTest.kt
jdbc-sqlcipher-jvm/src/test/kotlin/io/github/s0d3s/sqlcipher/multiplatform/jdbc/: SqlCipherDriverDiscoveryTest.kt  SqlCipherIntegrationTest.kt
kmp-api/: build.gradle.kts
kmp-api/src/commonMain/kotlin/dev/boosted/sqlcipher/api/: SqlCipherDatabase.kt
kmp-api/src/commonMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabase.kt
kmp-api/src/jvmMain/kotlin/dev/boosted/sqlcipher/api/: SqlCipherDatabaseFactoryJvm.kt
kmp-api/src/jvmMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabaseFactoryJvm.kt
native-artifacts/sqlcipher-multiplatform-jdbc-linux-arm64/: build.gradle.kts
native-artifacts/sqlcipher-multiplatform-jdbc-linux-x64/: build.gradle.kts
native-artifacts/sqlcipher-multiplatform-jdbc-macos-arm64/: build.gradle.kts
native-artifacts/sqlcipher-multiplatform-jdbc-macos-x64/: build.gradle.kts
native-artifacts/sqlcipher-multiplatform-jdbc-windows-x64/: build.gradle.kts
native-artifacts/sqlcipher-native-linux-arm64/: build.gradle.kts
native-artifacts/sqlcipher-native-linux-x64/: build.gradle.kts
native-artifacts/sqlcipher-native-macos-arm64/: build.gradle.kts
native-artifacts/sqlcipher-native-macos-x64/: build.gradle.kts
native-artifacts/sqlcipher-native-windows-x64/: build.gradle.kts
native-bridge/: CMakeLists.txt  build.gradle.kts  conanfile.txt
native-bridge/src/main/c/: sqlcipher_jni.c
samples/desktop-jvm/: build.gradle.kts
samples/desktop-jvm/src/main/kotlin/dev/boosted/sqlcipher/sample/: Main.kt
samples/desktop-jvm/src/main/kotlin/io/github/s0d3s/sqlcipher/multiplatform/samples/jdbc/: Main.kt
samples/kmp-basic-app/: build.gradle.kts
samples/kmp-basic-app/src/jvmMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/samples/kmpbasic/: Main.kt
samples/kmp-sqldelight-app/: build.gradle.kts
samples/kmp-sqldelight-app/src/commonMain/sqldelight/io/github/s0d3s/sqlcipher/multiplatform/samplesqldelight/db/: CrudSample.sq  TeamStats.sq
samples/kmp-sqldelight-app/src/jvmMain/kotlin/dev/boosted/sqlcipher/samplesqldelight/: Main.kt
samples/kmp-sqldelight-app/src/jvmMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/samplesqldelight/: Main.kt
scripts/: update-sqlcipher-amalgamation.ps1  update-sqlcipher-amalgamation.sh
sqlcipher-multiplatform/: build.gradle.kts
sqlcipher-multiplatform-jdbc-core/: build.gradle.kts
sqlcipher-multiplatform-jdbc-core/src/main/kotlin/io/github/s0d3s/sqlcipher_multiplatform_jdbc/: NativeBridge.kt  ProxyJdbc.kt  SqlCipherDriver.kt  SqlCipherSecurity.kt
sqlcipher-multiplatform-jdbc-core/src/test/kotlin/io/github/s0d3s/sqlcipher_multiplatform_jdbc/: SqlCipherDriverDiscoveryTest.kt  SqlCipherIntegrationTest.kt
sqlcipher-multiplatform/src/androidMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabaseFactoryAndroid.kt
sqlcipher-multiplatform/src/commonTest/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabaseCommonTest.kt
sqlcipher-multiplatform/src/jvmMain/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabaseFactoryJvm.kt
sqlcipher-multiplatform/src/jvmTest/kotlin/io/github/s0d3s/sqlcipher/multiplatform/api/: SqlCipherDatabaseFactoryJvmIntegrationTest.kt
